# NLP-Fast

./: .gitignore  README.md  Readme.md  _config.yml
gpu_model/: CMakeLists.txt  bert_op_cpu.cpp  bert_op_cpu.hpp  bert_state.cpp  bert_state.hpp  cuda_init.cu  cuda_init.cuh  cuda_multi_init.cu  cuda_multi_init.cuh  cuda_nostream_init.cu  cuda_nostream_init.cuh  gpu_bert_main.cpp  gpu_multi_bert_main.cpp  log.cpp  log.hpp  matmul.h  memnet_column4.cu  tensor_op_cpu.cpp  tensor_op_cpu.hpp  tensor_op_gpu.cu  tensor_op_gpu.cuh  utils.cpp  utils.hpp
model/: CMakeLists.txt  all_opt_model.cpp  all_opt_model.hpp  baseline_model.cpp  baseline_model.hpp  bert_main.cpp  bert_state.cpp  bert_state.hpp  c_matrix.hpp  cache_monitor_test.cpp  cachestat.cpp  cachestat.hpp  cachestat_monitor.cpp  cachestat_monitor.hpp  column_model.cpp  column_model.hpp  embedding.cpp  embedding.hpp  enum_util.hpp  log.cpp  log.hpp  partial_head_model.cpp  partial_head_model.hpp  random_chunk_generator.cpp  softmax_perf_test.cpp  tensor_func.cpp  tensor_func.hpp  test.py  utils.cpp  utils.hpp
read_value/: extract_val.py  extract_weight.py  read_zero.py
scripts/: README.md  eval_type.conf  parse_all.py  parse_gpu_all.py  run_all.sh  run_gpu_all.sh  set_freq_perf_mode.sh  verify_all.sh
utils/tensor_ops/zero_counter/: zero_counter.cc
utils/tensor_ops/zero_skewness_checker/: Makefile
utils/tlb_flush/: .gitignore  Makefile  flush_tlb.c  flush_tlb.h  test.c
